feat(core): Add OpenAPI generated API
Добавлена генерация OpenAPI для backend и frontend.
