# packages/frontend-api/src/apis/AuthenticationApi.ts
@@ -1,0 +1,112 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FinApp API
+ * API for financial application
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: support@finapp.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  ErrorResponse,
+  JwtResponse,
+  LoginRequest,
+  RegisterRequest,
+} from '../models/index';
+import {
+    ErrorResponseFromJSON,
+    ErrorResponseToJSON,
+    JwtResponseFromJSON,
+    JwtResponseToJSON,
+    LoginRequestFromJSON,
+    LoginRequestToJSON,
+    RegisterRequestFromJSON,
+    RegisterRequestToJSON,
+} from '../models/index';
+
+export interface AuthLoginPostRequest {
+    loginRequest: LoginRequest;
+}
+
+export interface AuthRegisterPostRequest {
+    registerRequest: RegisterRequest;
+}
+
+/**
+ * 
+ */
+export class AuthenticationApi extends runtime.BaseAPI {
+
+    /**
+     * User login
+     */
+    async authLoginPostRaw(requestParameters: AuthLoginPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<JwtResponse>> {
+        if (requestParameters.loginRequest === null || requestParameters.loginRequest === undefined) {
+            throw new runtime.RequiredError('loginRequest','Required parameter requestParameters.loginRequest was null or undefined when calling authLoginPost.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        const response = await this.request({
+            path: `/auth/login`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: LoginRequestToJSON(requestParameters.loginRequest),
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => JwtResponseFromJSON(jsonValue));
+    }
+
+    /**
+     * User login
+     */
+    async authLoginPost(requestParameters: AuthLoginPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<JwtResponse> {
+        const response = await this.authLoginPostRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * User registration
+     */
+    async authRegisterPostRaw(requestParameters: AuthRegisterPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
+        if (requestParameters.registerRequest === null || requestParameters.registerRequest === undefined) {
+            throw new runtime.RequiredError('registerRequest','Required parameter requestParameters.registerRequest was null or undefined when calling authRegisterPost.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        const response = await this.request({
+            path: `/auth/register`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: RegisterRequestToJSON(requestParameters.registerRequest),
+        }, initOverrides);
+
+        return new runtime.VoidApiResponse(response);
+    }
+
+    /**
+     * User registration
+     */
+    async authRegisterPost(requestParameters: AuthRegisterPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
+        await this.authRegisterPostRaw(requestParameters, initOverrides);
+    }
+
+}
