# packages/frontend-api/src/models/JwtResponse.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FinApp API
+ * API for financial application
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: support@finapp.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface JwtResponse
+ */
+export interface JwtResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof JwtResponse
+     */
+    token?: string;
+}
+
+/**
+ * Check if a given object implements the JwtResponse interface.
+ */
+export function instanceOfJwtResponse(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function JwtResponseFromJSON(json: any): JwtResponse {
+    return JwtResponseFromJSONTyped(json, false);
+}
+
+export function JwtResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): JwtResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'token': !exists(json, 'token') ? undefined : json['token'],
+    };
+}
+
+export function JwtResponseToJSON(value?: JwtResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'token': value.token,
+    };
+}
+
